--- a/levels/castle_courtyard/level.yaml
+++ b/levels/castle_courtyard/level.yaml
@@ -6,7 +6,7 @@ area-count: 1
 objects: []
 shared-path: []
 # loaded files
-skybox-bin: water
+skybox-bin: black
 texture-bin: outside
 effects: false
 actor-bins: [group9]
